--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "consolidate": "~0.9.1",
         "express": ">=3.x",
         "mongodb": "~1.3.9",
+        "mongoose": "~3.8.6",
+        "bower": ">0",
         "swig": "~0.14.0",
         "validator": "~1.1.3"
     },
